// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should not render any field if component type is not matched 1`] = `
.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c3 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover {
  cursor: pointer;
}

.c3:focus {
  outline: none;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c3:disabled .sc-AxiKw * {
  fill: #98A7B7;
}

.c3:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #126AFA;
}

.c3:not(:disabled):not(:hover) .sc-AxiKw * {
  fill: #ffffff;
}

.c3:not(:disabled):active {
  color: #ffffff;
  background: #0D4AAF;
}

.c3:not(:disabled):active .sc-AxiKw * {
  fill: #ffffff;
}

.c3:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #0F5AD5;
  box-shadow: 0 0.2rem 0.8rem rgba(15,90,213,0.35);
}

.c3:not(:disabled):not(:active):hover .sc-AxiKw * {
  fill: #ffffff;
}

.c3 .sc-AxiKw + .c4 {
  margin-left: 0.8rem;
}

.c3 .c4 + .sc-AxiKw {
  margin-left: 0.8rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 > * + * {
  margin-left: 1.6rem;
}

.c1 {
  grid-column: 1/-1;
}

.c1 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: inline-grid;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c0 > h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0 > span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <button
        class="c3"
        form="medly-dynamic-form"
        type="submit"
      >
        <span
          class="c4 c5"
        >
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Form should render properly with initial state 1`] = `
.c30 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c30 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c66 {
  overflow: visible;
  font-size: 2rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
}

.c66 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c17 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c20 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c67 {
  margin: 0;
  color: inherit;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  line-height: 2.4rem;
}

.c75 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c75 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c75:hover {
  cursor: pointer;
}

.c75:focus {
  outline: none;
}

.c75:disabled {
  cursor: not-allowed;
}

.c75:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c75:disabled .c29 * {
  fill: #98A7B7;
}

.c75:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #126AFA;
}

.c75:not(:disabled):not(:hover) .c29 * {
  fill: #ffffff;
}

.c75:not(:disabled):active {
  color: #ffffff;
  background: #0D4AAF;
}

.c75:not(:disabled):active .c29 * {
  fill: #ffffff;
}

.c75:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #0F5AD5;
  box-shadow: 0 0.2rem 0.8rem rgba(15,90,213,0.35);
}

.c75:not(:disabled):not(:active):hover .c29 * {
  fill: #ffffff;
}

.c75 .c29 + .c16 {
  margin-left: 0.8rem;
}

.c75 .c16 + .c29 {
  margin-left: 0.8rem;
}

.c19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c19 > :first-child {
  margin-bottom: 0.9rem;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c32 > :first-child {
  margin-bottom: 0.9rem;
}

.c21 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
}

.c21::after {
  content: ' *';
  color: default:inherit;
  disabled: #98A7B7;
}

.c24 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c22 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
}

.c28 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 .c29 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c26 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c26:checked ~ .c27 {
  border-color: #126AFA;
  background-color: #126AFA;
}

.c26:checked ~ .c27 .c29 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c26:checked ~ .c27 .c29 * {
  fill: #ffffff;
}

.c26:not(:checked) ~ .c27 {
  background-color: transparent;
  border-color: #13181D;
}

.c26:not(:disabled):focus ~ .c27 {
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
}

.c26:not(:disabled):focus:not(:checked) ~ .c27 {
  border-color: #126AFA;
}

.c25 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c23 * {
  cursor: pointer;
}

.c23:hover .c27 {
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
  border-color: #0F5AD5;
  background-color: #0F5AD5;
}

.c31 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c31 * {
  cursor: pointer;
}

.c31:hover .c27 {
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
  border-color: #126AFA;
}

.c73 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c73 * {
  cursor: pointer;
}

.c73:hover .c27 {
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
  border-color: #0F5AD5;
  background-color: #0F5AD5;
}

.c8 {
  top: 50%;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  opacity: 1;
}

.c8::after {
  content: ' *';
}

.c49 {
  pointer-events: none;
  margin-right: 1.6rem;
}

.c61 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c4 .c7 {
  color: #546A7F;
}

.c4 .c48,
.c4 .c60 {
  color: #546A7F;
}

.c4 .c48 *,
.c4 .c60 * {
  fill: #546A7F;
}

.c4 ~ .sc-fzqNqU {
  color: #546A7F;
}

.c4::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c4:hover::after,
.c4:focus-within::after {
  border-width: 0.2rem;
}

.c4:focus-within,
.c4:focus-within:hover {
  background-color: #E7F0FF;
}

.c4:focus-within::after,
.c4:focus-within:hover::after {
  border-color: #126AFA;
}

.c4:focus-within .c7,
.c4:focus-within:hover .c7 {
  color: #126AFA;
}

.c4:focus-within .c48,
.c4:focus-within:hover .c48,
.c4:focus-within .c60,
.c4:focus-within:hover .c60 {
  color: #126AFA;
}

.c4:focus-within .c48 *,
.c4:focus-within:hover .c48 *,
.c4:focus-within .c60 *,
.c4:focus-within:hover .c60 * {
  fill: #126AFA;
}

.c4:focus-within input::-webkit-input-placeholder,
.c4:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c4:focus-within input::-moz-placeholder,
.c4:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c4:focus-within input:-ms-input-placeholder,
.c4:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c4:focus-within input::placeholder,
.c4:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c3 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: 20rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c46 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: 29rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c59 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c6 {
  color: #13181D;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c6:focus {
  outline: none;
}

.c6:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c6:focus::-moz-placeholder {
  opacity: 1;
}

.c6:focus:-ms-input-placeholder {
  opacity: 1;
}

.c6:focus::placeholder {
  opacity: 1;
}

.c6::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6:not(:placeholder-shown) + .c7,
.c6:focus + .c7 {
  -webkit-transform: translateY(-87%) scale(0.75);
  -ms-transform: translateY(-87%) scale(0.75);
  transform: translateY(-87%) scale(0.75);
}

.c12 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c12::after {
  color: red;
  content: ' *';
}

.c40 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c58 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c58 .c2 {
  margin: 0;
  caret-color: transparent;
}

.c58 .c2 label {
  pointer-events: none;
}

.c58 .c2 div,
.c58 .c2 input,
.c58 .c2 label {
  cursor: pointer;
}

.c58 .c2 .c60 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c58 .c2:not(:focus-within):hover .c60 * {
  fill: #13181D;
}

.c13 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c18 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c11 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c11 .sc-fznMnq {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c42 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c42 .sc-fznMnq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c41 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c43 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: 100%;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c43.c43.c43 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c43:focus-within {
  border-color: #012040;
}

.c43 > * {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
}

.c44 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c44::-webkit-input-placeholder {
  color: #98A7B7;
}

.c44::-moz-placeholder {
  color: #98A7B7;
}

.c44:-ms-input-placeholder {
  color: #98A7B7;
}

.c44::placeholder {
  color: #98A7B7;
}

.c44::-webkit-file-upload-button {
  visibility: hidden;
}

.c45 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
}

.c55 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c57 {
  box-sizing: border-box;
  position: absolute;
  bottom: unset;
  left: 0;
  top: unset;
  right: unset;
}

.c53 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c54 {
  border: 0;
  padding: 0 44px;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: none;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c54::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c54::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c54:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c51 {
  box-sizing: border-box;
  position: relative;
}

.c56 {
  color: #BCBEC0;
  opacity: 1;
}

.c52 {
  display: grid;
  grid-template-columns: 194px 39px 194px;
  grid-template-rows: unset;
  background: transparent;
  border: 0;
  border-radius: 0;
}

.c47,
.c47 * {
  cursor: pointer;
}

.c50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c50 > div {
  display: inline-block;
  position: unset;
}

.c50 > div div {
  z-index: 5;
}

.c50 > div > div:last-child {
  top: unset;
  bottom: unset;
  left: unset;
  right: unset;
  top: calc(100% + 0px);
  left: 0%;
}

.c50 > div > div:first-child {
  width: 100%;
  display: inline-grid;
  grid-template-columns: auto 30px auto;
  padding: 0.8rem;
  box-sizing: border-box;
  text-align: center;
  cursor: pointer;
}

.c50 > div > div:first-child div::before {
  content: '';
  width: 1px;
  height: 100%;
  background-color: #C7D0D8;
}

.c50 > div > div:first-child div svg {
  display: none;
}

.c50 > div > div:first-child label {
  text-align: center;
  border: 0;
  background: transparent;
}

.c50 > div > div:first-child label input {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  max-width: 90px;
  min-height: unset;
  padding: 0;
  box-sizing: border-box;
  box-shadow: none;
  background: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-clip: padding-box;
}

.c50 > div > div:first-child label input:disabled {
  cursor: not-allowed;
}

.c50 > div > div:first-child label input:focus {
  outline: 0;
}

.c50 > div > div:first-child label input::-webkit-file-upload-button {
  visibility: hidden;
}

.c15 {
  width: 1px;
  opacity: 0;
}

.c14 {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
  background-clip: padding-box;
  background-color: #ffffff;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c14:focus {
  border-color: #012040;
  outline: 0;
}

.c65 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: 1px solid;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: default;
  border-radius: 2rem;
  padding: 0.2rem 0.5rem 0.2rem 0.9rem;
  color: #303C48;
  border-color: #607890;
  background-color: #dfe4e9;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c65:focus {
  outline: none;
}

.c65 .c29 {
  font-size: 1.2rem;
  border-radius: 50%;
  cursor: pointer;
  margin-left: 0.6rem;
}

.c65 .c29 {
  padding: 0.4rem;
  background-color: #b0bcc8;
}

.c65 .c29 * {
  fill: #303C48;
}

.c65 .c29:hover {
  background-color: #98A7B7;
}

.c65 .c29:hover * {
  fill: #13181D;
}

.c65:hover {
  border-color: #435465;
}

.c64 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c64 button {
  margin-right: 0.8rem;
}

.c62 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: 25.6rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c62 .c2 {
  margin: 0;
}

.c62 .c2 label {
  pointer-events: none;
}

.c62 .c2 div,
.c62 .c2 input,
.c62 .c2 label {
  cursor: pointer;
}

.c62 .c2:focus-within input {
  cursor: text;
}

.c62 .c2 input {
  padding-right: 1.6rem;
}

.c62 .c63 > .c29 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c62 .c63 > .c29 * {
  fill: #13181D;
}

.c38 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c38::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c36 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c36 ~ .c37 {
  border-color: #13181D;
}

.c36 ~ .c37::after {
  background-color: #13181D;
}

.c36:checked ~ .c37::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c36:disabled ~ .c37 {
  border-color: #98A7B7;
}

.c36:disabled ~ .c37::after {
  background-color: #98A7B7;
}

.c36:not(:disabled):checked ~ .c37 {
  border-color: #126AFA;
}

.c36:not(:disabled):checked ~ .c37::after {
  background-color: #126AFA;
}

.c36:not(:disabled):focus ~ .c37 {
  border-color: #126AFA;
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
}

.c35 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c34 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c39 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c39:hover.c33:hover .c37 {
  border-color: #126AFA;
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
}

.c74 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c74 > * + * {
  margin-left: 1.6rem;
}

.c1 {
  grid-column: 1/7;
}

.c1 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c9 {
  grid-column: 7/-1;
}

.c9 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c10 {
  grid-column: 1/-1;
}

.c10 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c70 {
  grid-column: 1/5;
}

.c70 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c71 {
  grid-column: 5/9;
}

.c71 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c72 {
  grid-column: 9/-1;
}

.c72 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c68 {
  grid-column: 1/-1;
  margin-top: 2.6rem;
}

.c69 {
  margin-bottom: 1rem;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: inline-grid;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c0 > h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0 > span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
        id="firstName-input-wrapper"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="firstName-helper-text"
              class="c6"
              id="firstName-input"
              name="firstName"
              placeholder=" "
              required=""
              type="text"
              value="first name"
            />
            <label
              class="c7 c8"
              for="firstName-input"
              required=""
            >
              First Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c9"
    >
      <div
        class="c2 c3"
        id="lastName-input-wrapper"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="lastName-helper-text"
              class="c6"
              id="lastName-input"
              name="lastName"
              placeholder=" "
              required=""
              type="text"
              value="last name"
            />
            <label
              class="c7 c8"
              for="lastName-input"
              required=""
            >
              Last Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c2 c3"
        id="email-input-wrapper"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="email-helper-text"
              class="c6"
              id="email-input"
              name="email"
              placeholder=" "
              required=""
              type="email"
              value="email@email.com"
            />
            <label
              class="c7 c8"
              for="email-input"
              required=""
            >
              Email
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
        id="resume-field"
      >
        <label
          class="c12 c13"
          required=""
        >
          Resume
        </label>
        <label
          class="c14"
          id="resume-label"
        >
          Click to choose file
          <input
            class="c15"
            id="resume"
            name="resume"
            required=""
            type="file"
          />
        </label>
        <span
          class="c16 c17 c18"
        >
          File size should be less than 5MB
        </span>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        aria-describedby="languages-helper-text"
        class="c19"
        id="languages-wrapper"
        name="languages"
      >
        <span
          class="c16 c20 c21"
          id="languages-label"
          required=""
          type="checkbox"
        >
          Languages
        </span>
        <div
          class="c22"
          id="languages-options"
        >
          
          <label
            class="c23"
            for="JAVA-languages"
            id="JAVA-languages-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c16 c17 c24"
              id="JAVA-languages-label"
              type="checkbox"
            >
              JAVA
            </span>
            <div
              class="c25"
            >
              <input
                checked=""
                class="c26"
                id="JAVA-languages"
                name="java"
                sizes="[object Object]"
                type="checkbox"
              />
              <div
                class="c27 c28"
              >
                <svg
                  class="c29 c30"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
          
          <label
            class="c31"
            for="RUBY-languages"
            id="RUBY-languages-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c16 c17 c24"
              id="RUBY-languages-label"
              type="checkbox"
            >
              RUBY
            </span>
            <div
              class="c25"
            >
              <input
                class="c26"
                id="RUBY-languages"
                name="ruby"
                sizes="[object Object]"
                type="checkbox"
              />
              <div
                class="c27 c28"
              >
                <svg
                  class="c29 c30"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        aria-describedby="role-helper-text"
        class="c32"
        id="role-wrapper"
      >
        <span
          class="c16 c20 c21"
          id="role-label"
          required=""
          type="radio"
        >
          Role
        </span>
        <div
          class="c22"
          id="role-options"
        >
          <label
            class="c33 c34"
            for="Front End-role"
            id="Front End-role-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c16 c17 c24"
              id="Front End-role-label"
              type="radio"
            >
              Front End
            </span>
            <div
              class="c35"
            >
              <input
                checked=""
                class="c36"
                id="Front End-role"
                name="role"
                required=""
                sizes="[object Object]"
                type="radio"
                value="front-end"
              />
              <div
                class="c37 c38"
              />
            </div>
          </label>
          <label
            class="c33 c39"
            for="Back End-role"
            id="Back End-role-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c16 c17 c24"
              id="Back End-role-label"
              type="radio"
            >
              Back End
            </span>
            <div
              class="c35"
            >
              <input
                class="c36"
                id="Back End-role"
                name="role"
                required=""
                sizes="[object Object]"
                type="radio"
                value="back-end"
              />
              <div
                class="c37 c38"
              />
            </div>
          </label>
          <label
            class="c33 c39"
            for="Full Stack-role"
            id="Full Stack-role-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c16 c17 c24"
              id="Full Stack-role-label"
              type="radio"
            >
              Full Stack
            </span>
            <div
              class="c35"
            >
              <input
                class="c36"
                id="Full Stack-role"
                name="role"
                required=""
                sizes="[object Object]"
                type="radio"
                value="full-stack"
              />
              <div
                class="c37 c38"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11"
        id="birthDate"
      >
        <label
          class="c40 c13"
          for="birthDate"
        >
          Birth Date
        </label>
        <div
          class="c41"
          id="medly-popover-wrapper"
        >
          <div
            class="c42"
            id="birthDate-input-field"
          >
            
            <div
              class="sc-fznMnq c43"
            >
              <input
                autocomplete="off"
                class="c44 c45"
                id="birthDate-input"
                name="birthDate"
                placeholder="Birth Date"
                type="text"
                value="01/01/2019"
              />
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c2 c46 c47"
      >
        <div
          class="c4"
        >
          <svg
            class="c29 c30 c48 c49"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M19 4h-1V3c0-.55-.45-1-1-1s-1 .45-1 1v1H8V3c0-.55-.45-1-1-1s-1 .45-1 1v1H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 15c0 .55-.45 1-1 1H6c-.55 0-1-.45-1-1V9h14v10zM9 13v-2H7v2h2zm2-2h2v2h-2v-2zm6 2v-2h-2v2h2z"
              fill="#000"
              fill-opacity=".54"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="c50"
            data-testid="react-datepicker"
          >
            <div
              class="c51"
            >
              <div
                class="sc-fzowVh c52"
                data-testid="DateRangeInputGrid"
              >
                <label
                  class="c53"
                  display="block"
                  for="startDate"
                >
                  <input
                    aria-label="Start date"
                    autocomplete="off"
                    class="c54"
                    color="#001217"
                    data-testid="DatepickerInput"
                    font-family="Montserrat, sans-serif"
                    font-size="14px"
                    font-weight="600"
                    id="startDate"
                    placeholder="Start date"
                    tabindex="0"
                    value="01/01/2019"
                    width="100%"
                  />
                </label>
                <div
                  class="c55"
                >
                  <svg
                    class="c56"
                    height="12px"
                    transform="rotate(90 0 0)"
                    viewBox="0 0 9 12"
                    width="15px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4.46.001a.538.538 0 0 0-.358.174L.156 4.48a.538.538 0 1 0 .796.724l3.01-3.285v13.689a.563.563 0 0 0 .538.55.563.563 0 0 0 .538-.55V1.918l3.01 3.286a.538.538 0 1 0 .796-.724L4.898.175a.538.538 0 0 0-.437-.174z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <label
                  class="c53"
                  display="block"
                  for="endDate"
                >
                  <input
                    aria-label="End date"
                    autocomplete="off"
                    class="c54"
                    color="#001217"
                    data-testid="DatepickerInput"
                    font-family="Montserrat, sans-serif"
                    font-size="14px"
                    font-weight="600"
                    id="endDate"
                    placeholder="End date"
                    tabindex="0"
                    value="01/02/2019"
                    width="100%"
                  />
                </label>
              </div>
              <div
                class="c57"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c58"
        id="country-wrapper"
      >
        <div
          class="c2 c59"
          id="country-input-wrapper"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <input
                aria-describedby="country-helper-text"
                autocomplete="off"
                class="c6"
                id="country-input"
                name="country"
                placeholder="Please Select . . ."
                required=""
                type="text"
                value="India"
              />
              <label
                class="c7 c8"
                for="country-input"
                required=""
              >
                Country
              </label>
            </div>
            <svg
              class="c29 c30 c60 c61"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c62"
        id="graduation-wrapper"
        name="graduation"
        placeholder="Please Select . . ."
      >
        <div
          class="c2 c59"
          id="graduation-input-wrapper"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <input
                aria-describedby="graduation-helper-text"
                autocomplete="off"
                class="c6"
                id="graduation-input"
                placeholder="1 options selected"
                required=""
                type="text"
                value="b-tech"
              />
              <label
                class="c7 c8"
                for="graduation-input"
                required=""
              >
                Graduation
              </label>
            </div>
            <div
              class="c63 c64"
              id="graduation-count"
            >
              <button
                class="c65"
                id="medly-options-chip"
              >
                <span
                  class="c16 c20"
                >
                  1
                </span>
                <svg
                  class="c29 c66"
                  fill="none"
                  height="1em"
                  id="medly-options-chip-clear"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                    fill="#000"
                    fill-opacity=".54"
                  />
                </svg>
              </button>
              <svg
                class="c29 c30"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                  fill="#000"
                />
              </svg>
            </div>
          </div>
          
        </div>
      </div>
    </div>
    <h4
      class="c16 c67 c68"
    >
      Marks
    </h4>
    <span
      class="c16 c17 c69"
    >
      Marks Information
    </span>
    <div
      class="c70"
    >
      <div
        class="c2 c3"
        id="marks.database-input-wrapper"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="marks.database-helper-text"
              class="c6"
              id="marks.database-input"
              name="marks.database"
              placeholder="Database"
              required=""
              type="number"
              value="10"
            />
            <label
              class="c7 c8"
              for="marks.database-input"
              required=""
            >
              Database
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c71"
    >
      <div
        class="c2 c3"
        id="marks.algorithms-input-wrapper"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="marks.algorithms-helper-text"
              class="c6"
              id="marks.algorithms-input"
              name="marks.algorithms"
              placeholder="Algorithms"
              required=""
              type="number"
              value="10"
            />
            <label
              class="c7 c8"
              for="marks.algorithms-input"
              required=""
            >
              Algorithms
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c72"
    >
      <div
        class="c2 c3"
        id="marks.maths-input-wrapper"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="marks.maths-helper-text"
              class="c6"
              id="marks.maths-input"
              name="marks.maths"
              placeholder="Maths"
              required=""
              type="number"
              value="10"
            />
            <label
              class="c7 c8"
              for="marks.maths-input"
              required=""
            >
              Maths
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c10"
    >
      
      <label
        class="c73"
        for="agree"
        id="agree-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c16 c17 c24"
          id="agree-label"
          type="checkbox"
        >
          Do you Agree
        </span>
        <div
          class="c25"
        >
          <input
            checked=""
            class="c26"
            id="agree"
            name="agree"
            sizes="[object Object]"
            type="checkbox"
          />
          <div
            class="c27 c28"
          >
            <svg
              class="c29 c30"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
    </div>
    <div
      class="c74"
    >
      <button
        class="c75"
        form="medly-dynamic-form"
        type="submit"
      >
        <span
          class="c16 c20"
        >
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Form should render properly without initial state 1`] = `
.c32 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c32 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c2 {
  margin: 0;
  color: inherit;
  font-size: 3.2rem;
  font-weight: 600;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  line-height: 4.0rem;
}

.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c19 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c22 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c65 {
  margin: 0;
  color: inherit;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  line-height: 2.4rem;
}

.c73 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c73 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c73:hover {
  cursor: pointer;
}

.c73:focus {
  outline: none;
}

.c73:disabled {
  cursor: not-allowed;
}

.c73:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c73:disabled .c31 * {
  fill: #98A7B7;
}

.c73:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #126AFA;
}

.c73:not(:disabled):not(:hover) .c31 * {
  fill: #ffffff;
}

.c73:not(:disabled):active {
  color: #ffffff;
  background: #0D4AAF;
}

.c73:not(:disabled):active .c31 * {
  fill: #ffffff;
}

.c73:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #0F5AD5;
  box-shadow: 0 0.2rem 0.8rem rgba(15,90,213,0.35);
}

.c73:not(:disabled):not(:active):hover .c31 * {
  fill: #ffffff;
}

.c73 .c31 + .c1 {
  margin-left: 0.8rem;
}

.c73 .c1 + .c31 {
  margin-left: 0.8rem;
}

.c21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c21 > :first-child {
  margin-bottom: 0.9rem;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c33 > :first-child {
  margin-bottom: 0.9rem;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
}

.c23::after {
  content: ' *';
  color: default:inherit;
  disabled: #98A7B7;
}

.c26 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c24 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
}

.c30 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c30 .c31 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c28 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c28:checked ~ .c29 {
  border-color: #126AFA;
  background-color: #126AFA;
}

.c28:checked ~ .c29 .c31 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c28:checked ~ .c29 .c31 * {
  fill: #ffffff;
}

.c28:not(:checked) ~ .c29 {
  background-color: transparent;
  border-color: #13181D;
}

.c28:not(:disabled):focus ~ .c29 {
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
}

.c28:not(:disabled):focus:not(:checked) ~ .c29 {
  border-color: #126AFA;
}

.c27 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c25 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c25 * {
  cursor: pointer;
}

.c25:hover .c29 {
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
  border-color: #126AFA;
}

.c71 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c71 * {
  cursor: pointer;
}

.c71:hover .c29 {
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
  border-color: #126AFA;
}

.c11 {
  top: 50%;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  opacity: 1;
}

.c11::after {
  content: ' *';
}

.c49 {
  pointer-events: none;
  margin-right: 1.6rem;
}

.c61 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c7 .c10 {
  color: #546A7F;
}

.c7 .c48,
.c7 .c60 {
  color: #546A7F;
}

.c7 .c48 *,
.c7 .c60 * {
  fill: #546A7F;
}

.c7 ~ .sc-fzqNqU {
  color: #546A7F;
}

.c7::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c7:hover::after,
.c7:focus-within::after {
  border-width: 0.2rem;
}

.c7:focus-within,
.c7:focus-within:hover {
  background-color: #E7F0FF;
}

.c7:focus-within::after,
.c7:focus-within:hover::after {
  border-color: #126AFA;
}

.c7:focus-within .c10,
.c7:focus-within:hover .c10 {
  color: #126AFA;
}

.c7:focus-within .c48,
.c7:focus-within:hover .c48,
.c7:focus-within .c60,
.c7:focus-within:hover .c60 {
  color: #126AFA;
}

.c7:focus-within .c48 *,
.c7:focus-within:hover .c48 *,
.c7:focus-within .c60 *,
.c7:focus-within:hover .c60 * {
  fill: #126AFA;
}

.c7:focus-within input::-webkit-input-placeholder,
.c7:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c7:focus-within input::-moz-placeholder,
.c7:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c7:focus-within input:-ms-input-placeholder,
.c7:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c7:focus-within input::placeholder,
.c7:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c6 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: 20rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c46 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: 29rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c59 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c9 {
  color: #13181D;
  width: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c9:focus {
  outline: none;
}

.c9:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c9:focus::-moz-placeholder {
  opacity: 1;
}

.c9:focus:-ms-input-placeholder {
  opacity: 1;
}

.c9:focus::placeholder {
  opacity: 1;
}

.c9::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9:not(:placeholder-shown) + .c10,
.c9:focus + .c10 {
  -webkit-transform: translateY(-87%) scale(0.75);
  -ms-transform: translateY(-87%) scale(0.75);
  transform: translateY(-87%) scale(0.75);
}

.c15 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c15::after {
  color: red;
  content: ' *';
}

.c40 {
  color: #13181D;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c58 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c58 .c5 {
  margin: 0;
  caret-color: transparent;
}

.c58 .c5 label {
  pointer-events: none;
}

.c58 .c5 div,
.c58 .c5 input,
.c58 .c5 label {
  cursor: pointer;
}

.c58 .c5 .c60 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c58 .c5:not(:focus-within):hover .c60 * {
  fill: #13181D;
}

.c16 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c20 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c14 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c14 .sc-fznMnq {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c42 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c42 .sc-fznMnq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c41 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c43 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: 100%;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c43.c43.c43 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c43:focus-within {
  border-color: #012040;
}

.c43 > * {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
}

.c44 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c44::-webkit-input-placeholder {
  color: #98A7B7;
}

.c44::-moz-placeholder {
  color: #98A7B7;
}

.c44:-ms-input-placeholder {
  color: #98A7B7;
}

.c44::placeholder {
  color: #98A7B7;
}

.c44::-webkit-file-upload-button {
  visibility: hidden;
}

.c45 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
}

.c55 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c57 {
  box-sizing: border-box;
  position: absolute;
  bottom: unset;
  left: 0;
  top: unset;
  right: unset;
}

.c53 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c54 {
  border: 0;
  padding: 0 44px;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: none;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c54::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c54::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c54:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c51 {
  box-sizing: border-box;
  position: relative;
}

.c56 {
  color: #BCBEC0;
  opacity: 1;
}

.c52 {
  display: grid;
  grid-template-columns: 194px 39px 194px;
  grid-template-rows: unset;
  background: transparent;
  border: 0;
  border-radius: 0;
}

.c47,
.c47 * {
  cursor: pointer;
}

.c50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c50 > div {
  display: inline-block;
  position: unset;
}

.c50 > div div {
  z-index: 5;
}

.c50 > div > div:last-child {
  top: unset;
  bottom: unset;
  left: unset;
  right: unset;
  top: calc(100% + 0px);
  left: 0%;
}

.c50 > div > div:first-child {
  width: 100%;
  display: inline-grid;
  grid-template-columns: auto 30px auto;
  padding: 0.8rem;
  box-sizing: border-box;
  text-align: center;
  cursor: pointer;
}

.c50 > div > div:first-child div::before {
  content: '';
  width: 1px;
  height: 100%;
  background-color: #C7D0D8;
}

.c50 > div > div:first-child div svg {
  display: none;
}

.c50 > div > div:first-child label {
  text-align: center;
  border: 0;
  background: transparent;
}

.c50 > div > div:first-child label input {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  max-width: 90px;
  min-height: unset;
  padding: 0;
  box-sizing: border-box;
  box-shadow: none;
  background: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-clip: padding-box;
}

.c50 > div > div:first-child label input:disabled {
  cursor: not-allowed;
}

.c50 > div > div:first-child label input:focus {
  outline: 0;
}

.c50 > div > div:first-child label input::-webkit-file-upload-button {
  visibility: hidden;
}

.c18 {
  width: 1px;
  opacity: 0;
}

.c17 {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  padding: 0.8rem;
  color: #435465;
  background-clip: padding-box;
  background-color: #ffffff;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c17:focus {
  border-color: #012040;
  outline: 0;
}

.c64 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c64 button {
  margin-right: 0.8rem;
}

.c62 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: 25.6rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c62 .c5 {
  margin: 0;
}

.c62 .c5 label {
  pointer-events: none;
}

.c62 .c5 div,
.c62 .c5 input,
.c62 .c5 label {
  cursor: pointer;
}

.c62 .c5:focus-within input {
  cursor: text;
}

.c62 .c5 input {
  padding-right: 1.6rem;
}

.c62 .c63 > .c31 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c62 .c63 > .c31 * {
  fill: #13181D;
}

.c39 {
  position: relative;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c39::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  -webkit-transform: translate(-50%,-50%) scale(0);
  -ms-transform: translate(-50%,-50%) scale(0);
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  -webkit-transition: -webkit-transform 100ms ease-out;
  -webkit-transition: transform 100ms ease-out;
  transition: transform 100ms ease-out;
}

.c37 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c37 ~ .c38 {
  border-color: #13181D;
}

.c37 ~ .c38::after {
  background-color: #13181D;
}

.c37:checked ~ .c38::after {
  -webkit-transform: translate(-50%,-50%) scale(1);
  -ms-transform: translate(-50%,-50%) scale(1);
  transform: translate(-50%,-50%) scale(1);
}

.c37:disabled ~ .c38 {
  border-color: #98A7B7;
}

.c37:disabled ~ .c38::after {
  background-color: #98A7B7;
}

.c37:not(:disabled):checked ~ .c38 {
  border-color: #126AFA;
}

.c37:not(:disabled):checked ~ .c38::after {
  background-color: #126AFA;
}

.c37:not(:disabled):focus ~ .c38 {
  border-color: #126AFA;
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
}

.c36 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c35:hover.c34:hover .c38 {
  border-color: #126AFA;
  box-shadow: 0 0 0.8rem rgba(18,106,250,0.35);
}

.c72 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c72 > * + * {
  margin-left: 1.6rem;
}

.c4 {
  grid-column: 1/7;
}

.c4 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c12 {
  grid-column: 7/-1;
}

.c12 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c13 {
  grid-column: 1/-1;
}

.c13 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c68 {
  grid-column: 1/5;
}

.c68 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c69 {
  grid-column: 5/9;
}

.c69 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c70 {
  grid-column: 9/-1;
}

.c70 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c66 {
  grid-column: 1/-1;
  margin-top: 2.6rem;
}

.c67 {
  margin-bottom: 1rem;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: grid;
  width: 100%;
  min-width: 300px;
}

.c0 > h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0 > span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <h2
      class="c1 c2"
    >
      Dummy Form
    </h2>
    <span
      class="c1 c3"
    >
      Dummy Description
    </span>
    <div
      class="c4"
    >
      <div
        class="c5 c6"
        id="firstName-input-wrapper"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="firstName-helper-text"
              class="c9"
              id="firstName-input"
              name="firstName"
              placeholder=" "
              required=""
              type="text"
              value=""
            />
            <label
              class="c10 c11"
              for="firstName-input"
              required=""
            >
              First Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c12"
    >
      <div
        class="c5 c6"
        id="lastName-input-wrapper"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="lastName-helper-text"
              class="c9"
              id="lastName-input"
              name="lastName"
              placeholder=" "
              required=""
              type="text"
              value=""
            />
            <label
              class="c10 c11"
              for="lastName-input"
              required=""
            >
              Last Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c5 c6"
        id="email-input-wrapper"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="email-helper-text"
              class="c9"
              id="email-input"
              name="email"
              placeholder=" "
              required=""
              type="email"
              value=""
            />
            <label
              class="c10 c11"
              for="email-input"
              required=""
            >
              Email
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
        id="resume-field"
      >
        <label
          class="c15 c16"
          required=""
        >
          Resume
        </label>
        <label
          class="c17"
          id="resume-label"
        >
          Click to choose file
          <input
            class="c18"
            id="resume"
            name="resume"
            required=""
            type="file"
          />
        </label>
        <span
          class="c1 c19 c20"
        >
          File size should be less than 5MB
        </span>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        aria-describedby="languages-helper-text"
        class="c21"
        id="languages-wrapper"
        name="languages"
      >
        <span
          class="c1 c22 c23"
          id="languages-label"
          required=""
          type="checkbox"
        >
          Languages
        </span>
        <div
          class="c24"
          id="languages-options"
        >
          
          <label
            class="c25"
            for="JAVA-languages"
            id="JAVA-languages-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c1 c19 c26"
              id="JAVA-languages-label"
              type="checkbox"
            >
              JAVA
            </span>
            <div
              class="c27"
            >
              <input
                class="c28"
                id="JAVA-languages"
                name="java"
                sizes="[object Object]"
                type="checkbox"
              />
              <div
                class="c29 c30"
              >
                <svg
                  class="c31 c32"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
          
          <label
            class="c25"
            for="RUBY-languages"
            id="RUBY-languages-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c1 c19 c26"
              id="RUBY-languages-label"
              type="checkbox"
            >
              RUBY
            </span>
            <div
              class="c27"
            >
              <input
                class="c28"
                id="RUBY-languages"
                name="ruby"
                sizes="[object Object]"
                type="checkbox"
              />
              <div
                class="c29 c30"
              >
                <svg
                  class="c31 c32"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        aria-describedby="role-helper-text"
        class="c33"
        id="role-wrapper"
      >
        <span
          class="c1 c22 c23"
          id="role-label"
          required=""
          type="radio"
        >
          Role
        </span>
        <div
          class="c24"
          id="role-options"
        >
          <label
            class="c34 c35"
            for="Front End-role"
            id="Front End-role-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c1 c19 c26"
              id="Front End-role-label"
              type="radio"
            >
              Front End
            </span>
            <div
              class="c36"
            >
              <input
                class="c37"
                id="Front End-role"
                name="role"
                required=""
                sizes="[object Object]"
                type="radio"
                value="front-end"
              />
              <div
                class="c38 c39"
              />
            </div>
          </label>
          <label
            class="c34 c35"
            for="Back End-role"
            id="Back End-role-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c1 c19 c26"
              id="Back End-role-label"
              type="radio"
            >
              Back End
            </span>
            <div
              class="c36"
            >
              <input
                class="c37"
                id="Back End-role"
                name="role"
                required=""
                sizes="[object Object]"
                type="radio"
                value="back-end"
              />
              <div
                class="c38 c39"
              />
            </div>
          </label>
          <label
            class="c34 c35"
            for="Full Stack-role"
            id="Full Stack-role-wrapper"
            sizes="[object Object]"
          >
            <span
              class="c1 c19 c26"
              id="Full Stack-role-label"
              type="radio"
            >
              Full Stack
            </span>
            <div
              class="c36"
            >
              <input
                class="c37"
                id="Full Stack-role"
                name="role"
                required=""
                sizes="[object Object]"
                type="radio"
                value="full-stack"
              />
              <div
                class="c38 c39"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14"
        id="birthDate"
      >
        <label
          class="c40 c16"
          for="birthDate"
        >
          Birth Date
        </label>
        <div
          class="c41"
          id="medly-popover-wrapper"
        >
          <div
            class="c42"
            id="birthDate-input-field"
          >
            
            <div
              class="sc-fznMnq c43"
            >
              <input
                autocomplete="off"
                class="c44 c45"
                id="birthDate-input"
                name="birthDate"
                placeholder="Birth Date"
                type="text"
                value=""
              />
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c5 c46 c47"
      >
        <div
          class="c7"
        >
          <svg
            class="c31 c32 c48 c49"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M19 4h-1V3c0-.55-.45-1-1-1s-1 .45-1 1v1H8V3c0-.55-.45-1-1-1s-1 .45-1 1v1H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 0 0 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 15c0 .55-.45 1-1 1H6c-.55 0-1-.45-1-1V9h14v10zM9 13v-2H7v2h2zm2-2h2v2h-2v-2zm6 2v-2h-2v2h2z"
              fill="#000"
              fill-opacity=".54"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="c50"
            data-testid="react-datepicker"
          >
            <div
              class="c51"
            >
              <div
                class="sc-fzowVh c52"
                data-testid="DateRangeInputGrid"
              >
                <label
                  class="c53"
                  display="block"
                  for="startDate"
                >
                  <input
                    aria-label="Start date"
                    autocomplete="off"
                    class="c54"
                    color="#001217"
                    data-testid="DatepickerInput"
                    font-family="Montserrat, sans-serif"
                    font-size="14px"
                    font-weight="600"
                    id="startDate"
                    placeholder="Start date"
                    tabindex="0"
                    value=""
                    width="100%"
                  />
                </label>
                <div
                  class="c55"
                >
                  <svg
                    class="c56"
                    height="12px"
                    transform="rotate(90 0 0)"
                    viewBox="0 0 9 12"
                    width="15px"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4.46.001a.538.538 0 0 0-.358.174L.156 4.48a.538.538 0 1 0 .796.724l3.01-3.285v13.689a.563.563 0 0 0 .538.55.563.563 0 0 0 .538-.55V1.918l3.01 3.286a.538.538 0 1 0 .796-.724L4.898.175a.538.538 0 0 0-.437-.174z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <label
                  class="c53"
                  display="block"
                  for="endDate"
                >
                  <input
                    aria-label="End date"
                    autocomplete="off"
                    class="c54"
                    color="#001217"
                    data-testid="DatepickerInput"
                    font-family="Montserrat, sans-serif"
                    font-size="14px"
                    font-weight="600"
                    id="endDate"
                    placeholder="End date"
                    tabindex="0"
                    value=""
                    width="100%"
                  />
                </label>
              </div>
              <div
                class="c57"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c58"
        id="country-wrapper"
      >
        <div
          class="c5 c59"
          id="country-input-wrapper"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <input
                aria-describedby="country-helper-text"
                autocomplete="off"
                class="c9"
                id="country-input"
                name="country"
                placeholder="Please Select . . ."
                required=""
                type="text"
                value=""
              />
              <label
                class="c10 c11"
                for="country-input"
                required=""
              >
                Country
              </label>
            </div>
            <svg
              class="c31 c32 c60 c61"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c62"
        id="graduation-wrapper"
        name="graduation"
        placeholder="Please Select . . ."
      >
        <div
          class="c5 c59"
          id="graduation-input-wrapper"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <input
                aria-describedby="graduation-helper-text"
                autocomplete="off"
                class="c9"
                id="graduation-input"
                placeholder="Please Select . . ."
                required=""
                type="text"
                value=""
              />
              <label
                class="c10 c11"
                for="graduation-input"
                required=""
              >
                Graduation
              </label>
            </div>
            <div
              class="c63 c64"
              id="graduation-count"
            >
              <svg
                class="c31 c32"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                  fill="#000"
                />
              </svg>
            </div>
          </div>
          
        </div>
      </div>
    </div>
    <h4
      class="c1 c65 c66"
    >
      Marks
    </h4>
    <span
      class="c1 c19 c67"
    >
      Marks Information
    </span>
    <div
      class="c68"
    >
      <div
        class="c5 c6"
        id="marks.database-input-wrapper"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="marks.database-helper-text"
              class="c9"
              id="marks.database-input"
              name="marks.database"
              placeholder="Database"
              required=""
              type="number"
              value=""
            />
            <label
              class="c10 c11"
              for="marks.database-input"
              required=""
            >
              Database
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c69"
    >
      <div
        class="c5 c6"
        id="marks.algorithms-input-wrapper"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="marks.algorithms-helper-text"
              class="c9"
              id="marks.algorithms-input"
              name="marks.algorithms"
              placeholder="Algorithms"
              required=""
              type="number"
              value=""
            />
            <label
              class="c10 c11"
              for="marks.algorithms-input"
              required=""
            >
              Algorithms
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c70"
    >
      <div
        class="c5 c6"
        id="marks.maths-input-wrapper"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="marks.maths-helper-text"
              class="c9"
              id="marks.maths-input"
              name="marks.maths"
              placeholder="Maths"
              required=""
              type="number"
              value=""
            />
            <label
              class="c10 c11"
              for="marks.maths-input"
              required=""
            >
              Maths
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c13"
    >
      
      <label
        class="c71"
        for="agree"
        id="agree-wrapper"
        sizes="[object Object]"
      >
        <span
          class="c1 c19 c26"
          id="agree-label"
          type="checkbox"
        >
          Do you Agree
        </span>
        <div
          class="c27"
        >
          <input
            class="c28"
            id="agree"
            name="agree"
            sizes="[object Object]"
            type="checkbox"
          />
          <div
            class="c29 c30"
          >
            <svg
              class="c31 c32"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
    </div>
    <div
      class="c72"
    >
      <button
        class="c73"
        form="medly-dynamic-form"
        type="submit"
      >
        <span
          class="c1 c22"
        >
          Upload
        </span>
      </button>
    </div>
  </form>
</div>
`;
